=head1 NAME

Changes - Apache::Test change logfile

=head1 CHANGES

=over 3

=item 1.16-dev

fix problem with multiple all.t files where only the final
file was being run through the test harness.  [Geoffrey Young]

Documented that redirection does not with "POST" requests in
Apache::TestRequest unless LWP is installed. Also modified
the redirect_ok() method to ensure that such is the case.
[David Wheeler]



=item 1.15 - October 22, 2004

add need_php4() and have_php4() which will return true when mod_php4
is available.  also, tidy up need_php() and have_php() for PHP4 on
Apache 2.0.  [Joe Orton]

add new test_config make target, equivalent to t/TEST -conf,
and make it a prerequisite for the cmodules make target.  now
you can 'make cmodules' to build the things in c-modules/
without running t/TEST -conf first.  [Geoffrey Young]

add -withtestmore import action, which allows Test::More >= 0.49
to replace Test.pm as the engine for server-side tests
[Geoffrey Young]

add automatic core dump backtrace generation in t/REPORT if
Devel::GDB is installed [Gozer]

add 'testcover' make target for running tests with Devel::Cover
[Geoffrey Young]



=item 1.14 - October 12, 2004

improve the same_interpreter framework to handle response failures
while trying to init and later find out the same interpreter. [Stas]

make sure that 'make distclean' cleans all the autogenerated files
[Stas]

make sure that if -maxclients option is passed on the command line,
minclients will never be bigger than that value [Stas]

add -one-process runtime argument, which will start the server
in single-server mode (httpd -X in Apache 1.X or 
httpd -D ONE_PROCESS in 2.X) [Geoffrey Young]

In open_cmd, sanitize PATH instead of clearing it [Gozer]

Allow / \ and \\ path delimiters in SKIP file [Markus Wichitill
<mawic@gmx.de>]

Added an apxs query cache for improved test performance [Gozer]

run_tests make target no longer invokes t/TEST -clean, making it